crates/ir/tests/ir/snapshots/main__ir__lower__data_types__or_pattern_mixed_wildcard.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_mixed_wildcard

type Option[x10] = Some#0(x10) | None#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn check(v0: Option[Int]) -> String =
  switch v0 {
    0 (v1: x10) ->
      let v3: Bool = eq_int(v1, 1)
      if v3 {
        "found"
      } else {
        let v2: Bool = eq_int(v1, 2)
        if v2 {
          "found"
        } else {
          "nope"
        }
      }
    _ ->
      "nope"
  }

fn main() -> Unit =
  let v4: Option[Int] = construct Option::Some#0(1)
  let v5: String = call check(v4)
  let v6: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v7: Unit = call println(v6, v5)
  let v8: Option[Int] = construct Option::Some#0(2)
  let v9: String = call check(v8)
  let v10: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v11: Unit = call println(v10, v9)
  let v13: Option[Int] = construct Option::Some#0(3)
  let v14: String = call check(v13)
  let v12: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v15: Unit = call println(v12, v14)
  v15
