crates/ir/tests/ir/snapshots/main__ir__lower__data_types__or_pattern_multiple_arms.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_multiple_arms

type T = A#0 | B#1 | C#2 | D#3 | E#4 | F#5
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn classify(v0: T) -> String =
  switch v0 {
    0 ->
      "a"
    1 ->
      "a"
    2 ->
      "b"
    3 ->
      "b"
    4 ->
      "c"
    5 ->
      "c"
  }

fn main() -> Unit =
  let v1: T = construct T::A#0()
  let v2: String = call classify(v1)
  let v3: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v4: Unit = call println(v3, v2)
  let v5: T = construct T::D#3()
  let v6: String = call classify(v5)
  let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v8: Unit = call println(v7, v6)
  let v10: T = construct T::F#5()
  let v11: String = call classify(v10)
  let v9: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v12: Unit = call println(v9, v11)
  v12
