crates/ir/tests/ir/snapshots/main__ir__lower__data_types__or_pattern_nested.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_nested

type Expr = Lit#0(Int) | Neg#1(Expr) | Add#2(Expr, Expr)
type Option[x10] = Some#0(x10) | None#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn classify(v0: Option[Expr]) -> String =
  switch v0 {
    0 (v1: x10) ->
      switch v1 {
        0 (v2: Int) ->
          "lit"
        1 (v3: Expr) ->
          switch v3 {
            0 (v4: Int) ->
              "lit"
            _ ->
              "other"
          }
        _ ->
          "other"
      }
    _ ->
      "other"
  }

fn main() -> Unit =
  let v5: Expr = construct Expr::Lit#0(1)
  let v6: Option[Expr] = construct Option::Some#0(v5)
  let v7: String = call classify(v6)
  let v8: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v9: Unit = call println(v8, v7)
  let v10: Expr = construct Expr::Lit#0(2)
  let v11: Expr = construct Expr::Neg#1(v10)
  let v12: Option[Expr] = construct Option::Some#0(v11)
  let v13: String = call classify(v12)
  let v14: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v15: Unit = call println(v14, v13)
  let v17: Expr = construct Expr::Lit#0(1)
  let v18: Expr = construct Expr::Lit#0(2)
  let v19: Expr = construct Expr::Add#2(v17, v18)
  let v20: Option[Expr] = construct Option::Some#0(v19)
  let v21: String = call classify(v20)
  let v16: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v22: Unit = call println(v16, v21)
  v22
