crates/ir/tests/ir/snapshots/main__ir__lower__data_types__or_pattern_non_first_arm.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_non_first_arm

type T = A#0 | B#1 | C#2 | D#3
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn classify(v0: T) -> String =
  switch v0 {
    0 ->
      "one"
    1 ->
      "other"
    2 ->
      "other"
    3 ->
      "four"
  }

fn main() -> Unit =
  let v1: T = construct T::A#0()
  let v2: String = call classify(v1)
  let v3: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v4: Unit = call println(v3, v2)
  let v5: T = construct T::B#1()
  let v6: String = call classify(v5)
  let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v8: Unit = call println(v7, v6)
  let v9: T = construct T::C#2()
  let v10: String = call classify(v9)
  let v11: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v12: Unit = call println(v11, v10)
  let v14: T = construct T::D#3()
  let v15: String = call classify(v14)
  let v13: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v16: Unit = call println(v13, v15)
  v16
