crates/ir/tests/ir/snapshots/main__ir__lower__data_types__or_pattern_tuple.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_tuple

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn check(v0: (Bool, Bool)) -> String =
  let v1: Bool = tuple_project v0.0
  let v2: Bool = tuple_project v0.1
  let v4: Bool = eq_int(v1, true)
  if v4 {
    "yes"
  } else {
    let v3: Bool = eq_int(v2, true)
    if v3 {
      "yes"
    } else {
      "no"
    }
  }

fn main() -> Unit =
  let v5: (Bool, Bool) = tuple(true, false)
  let v6: String = call check(v5)
  let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v8: Unit = call println(v7, v6)
  let v9: (Bool, Bool) = tuple(false, true)
  let v10: String = call check(v9)
  let v11: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v12: Unit = call println(v11, v10)
  let v14: (Bool, Bool) = tuple(false, false)
  let v15: String = call check(v14)
  let v13: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v16: Unit = call println(v13, v15)
  v16
