crates/ir/tests/ir/snapshots/main__ir__lower__data_types__result_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__result_basic

type Result[x10, y10] = Ok#0(y10) | Err#1(x10)
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn extract(v0: Result[u11, Int]) -> Int =
  switch v0 {
    0 (v1: Int) ->
      v1
    1 (v2: u11) ->
      let v3: Int = sub_int(0, 1)
      v3
  }

fn test() -> Int =
  let v4: Result[z11, Int] = construct Result::Ok#0(42)
  let v5: Int = call extract(v4)
  v5
