crates/ir/tests/ir/snapshots/main__ir__lower__data_types__struct_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module data_types__struct_basic

struct Point { x: Int, y: Int }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Point = construct Point(10, 20)
  let v2: Int = project v0.0
  let v3: Int = project v0.1
  let v4: Int = add_int(v2, v3)
  let v1: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v5: Unit = call println(v1, v4)
  v5
